Updates to documentation, fixed version numbers in docs.

--- a/site/src/main/resources/application.conf
+++ b/site/src/main/resources/application.conf
@@ -20,9 +20,7 @@ spray {
     interface = "localhost"
     port = 8080
     dev-mode = on
-    repo-dirs = "/opt/nexus/sonatype-work/nexus/storage/releases:/opt/nexus/sonatype-work/nexus/storage/snapshots"
-    nightlies-dir = "/opt/nexus/sonatype-work/nexus/storage/nightlies"
-    main-version = ${spray.version}
-    other-versions = ["1.0-M8.1", "1.0-RC4", "1.1-M7", "1.1-M8", "1.1-RC4", "1.2-M8", "1.2-RC4"]
+    main-version = "0.9.0"
+    other-versions = []
   }
 }
