Basic weighted overlay service + controller

--- a/site/src/main/resources/application.conf
+++ b/site/src/main/resources/application.conf
@@ -1,3 +1,5 @@
+geotrellis.catalog = data/catalog.json
+
 akka {
   loglevel = DEBUG
   event-handlers = ["akka.event.slf4j.Slf4jEventHandler"]
@@ -18,7 +20,7 @@ spray {
 
   site {
     interface = "localhost"
-    port = 8080
+    port = 9090
     dev-mode = on
     main-version = "0.9.0"
     other-versions = []
