WO switched to new layers

--- a/site/src/main/resources/application.conf
+++ b/site/src/main/resources/application.conf
@@ -1,4 +1,4 @@
-geotrellis.catalog = data/catalog.json
+geotrellis.catalog = site/data/catalog.json
 
 akka {
   loglevel = DEBUG
@@ -21,7 +21,7 @@ spray {
   site {
     interface = "localhost"
     port = 9090
-    dev-mode = on
+    dev-mode = off
     main-version = "0.9.0"
     other-versions = []
   }
