--- a/site/src/main/resources/application.conf
+++ b/site/src/main/resources/application.conf
@@ -11,7 +11,8 @@ spray {
   }
 
   routing {
-    file-chunking-threshold-size = 0
+    file-chunking-threshold-size = 128k
+    file-chunking-chunk-size = 128k
   }
 
   util {
