--- a/deployment/ansible/roles/geotrellis-site.app/meta/main.yml
+++ b/deployment/ansible/roles/geotrellis-site.app/meta/main.yml
@@ -1,6 +1,7 @@
 ---
 dependencies:
   - { role: "azavea.git" }
+  - { role: "azavea.ruby", ruby_development: True }
   - { role: "azavea.java" }
   - { role: "azavea.nginx", nginx_delete_default_site: True }
   - { role: "azavea.unzip" }
