--- a/deployment/ansible/roles/geotrellis-site.app/meta/main.yml
+++ b/deployment/ansible/roles/geotrellis-site.app/meta/main.yml
@@ -3,6 +3,7 @@ dependencies:
   - { role: "azavea.git" }
   - { role: "azavea.ruby", ruby_development: True }
   - { role: "azavea.java" }
+  - { role: "azavea.nodejs" }
   - { role: "azavea.nginx", nginx_delete_default_site: True }
   - { role: "azavea.unzip" }
   - { role: "azavea.packer", when: developing }
