--- a/jekyll/nginx.conf
+++ b/jekyll/nginx.conf
@@ -26,9 +26,9 @@ http {
   server {
     listen       8080;
 
-#    location /gt {
-#      proxy_pass http://gtserver:9090;
-#    }
+    location /gt {
+      proxy_pass http://geotrellis:9090;
+    }
 
     location / {
       root /var/www/;
