--- a/geotrellis/srv/src/main/resources/application.conf
+++ b/geotrellis/srv/src/main/resources/application.conf
@@ -1,4 +1,4 @@
-geotrellis.catalog = data/catalog.json
+geotrellis.catalog = srv/data/catalog.json
 
 akka {
   loglevel = DEBUG
@@ -20,7 +20,7 @@ spray {
   }
 
   site {
-    interface = "localhost"
+    interface = "geotrellis"
     port = 9090
     dev-mode = off
     main-version = "0.9.0"
