Assemble fat jar outside of docker
- This has a much faster turnaround for testing.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,5 +17,7 @@ services:
     build:
       context: ./nginx
       dockerfile: Dockerfile
+    depends_on:
+      - gtsite-service
     ports:
       - "8080:8080"
