Handle transit/chatta redirects with nginx
- Transit demo can be found at `/transit/`
- Chatta demo can be found at `/chatta/`

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,4 +1,4 @@
-user  nginx;
+user nginx;
 
 worker_processes auto;
 
@@ -10,6 +10,7 @@ events {
 }
 
 http {
+
   include /etc/nginx/mime.types;
   log_format   main '$remote_addr - $remote_user [$time_local]  $status '
     '"$request" $body_bytes_sent "$http_referer" '
@@ -26,8 +27,24 @@ http {
   server {
     listen       8080;
 
+    location /gt/transit/wms {
+      proxy_pass http://gt-transit:9999/api/travelshed/wms2;
+    }
+
     location /gt {
       proxy_pass http://gtsite-service:9090;
+    }
+
+    location /api-docs {
+      proxy_pass http://gt-transit:9999;
+    }
+
+    location /transit/ {
+      proxy_pass http://gt-transit:9999/;
+    }
+
+    location /chatta/ {
+      proxy_pass http://gt-chatta-demo:8777/;
     }
 
     location / {
