Add Vagrant management setup
- Move terraform resources into `deployment/terraform`
- Add Vagrant VM and Ansible roles to install Docker/Compose, AWS CLI, and Terraform.

--- a/.gitignore
+++ b/.gitignore
@@ -20,12 +20,13 @@ TAGS
 .history
 .idea
 
-.vagrant
+.vagrant/
 deployment/ansible/roles/azavea.*
+*.retry
 
-srv/data/hillshade/hills.arg
-site/_site
-site/_site/*
+service/srv/data/hillshade/hills.arg
+nginx/_site
+nginx/_site/*
 srv/hs_err_pid*
 
 assembly
