--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       - "${HOME}/.m2:/root/.m2"
       - "${HOME}/.sbt:/root/.sbt"
       - "./service/:/service"
+      - "./service/srv/data:/srv/data"
   gtsite-assets:
     build:
       context: ./static
