Add travis deployment
Install dependencies and run STRTA to build and deploy
the Geotrellis Site service to ECS.

--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -2,9 +2,9 @@ version: '2.1'
 
 services:
   gtsite-service:
-    image: gtsite-service:${GIT_COMMIT}
+    image: gtsite-service:${VERSION}
     build:
       context: ./service
       dockerfile: Dockerfile
   gtsite-nginx:
-    image: gtsite-nginx:${GIT_COMMIT}
+    image: gtsite-nginx:${VERSION}
