Remove references to Transit and Chatta from Nginx
Remove directives that support reverse proxying requests to alternate upstreams.
The Nginx configuration for the project should only be responsible for
geotrellis-site content.

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -20,31 +20,15 @@ http {
 
   keepalive_timeout  65;
 
-  sendfile     on;
+  sendfile     off;
   tcp_nopush   on;
   server_names_hash_bucket_size 128; # this seems to be required for some vhosts
 
   server {
     listen       8080;
 
-    location /gt/transit/wms {
-      proxy_pass http://gt-transit:9999/api/travelshed/wms2;
-    }
-
     location /gt {
       proxy_pass http://gtsite-service:9090;
-    }
-
-    location /api-docs {
-      proxy_pass http://gt-transit:9999;
-    }
-
-    location /transit/ {
-      proxy_pass http://gt-transit:9999/;
-    }
-
-    location /chatta/ {
-      proxy_pass http://gt-chatta-demo:8777/;
     }
 
     location / {
