Volume mount static content and config into nginx container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,3 +30,6 @@ services:
       - gtsite-service
     ports:
       - "8080:8080"
+    volumes:
+      - ./nginx/_site:/var/www
+      - ./nginx/nginx.conf:/etc/nginx/default.conf
