--- a/deployment/ansible/playbook.yml
+++ b/deployment/ansible/playbook.yml
@@ -8,7 +8,7 @@
 
   roles:
     - { role: "azavea.terraform" }
-    - { role: "azavea.java" } 
+    # - { role: "azavea.java" } 
     - { role: "azavea.aws-cli" }
     - { role: "gtsite.environment" }
     - { role: "gtsite.docker" }
