--- a/.gitignore
+++ b/.gitignore
@@ -25,8 +25,8 @@ deployment/ansible/roles/azavea.*
 *.retry
 
 service/srv/data/hillshade/hills.arg
-nginx/_site
 nginx/_site/*
+!nginx/_site/.gitkeep
 srv/hs_err_pid*
 
 assembly
