--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       - "${HOME}/.sbt:/root/.sbt"
       - "./service/:/service"
       - "./service/srv/data:/srv/data"
+
   gtsite-assets:
     build:
       context: ./static
@@ -21,6 +22,8 @@ services:
     volumes:
       - ./static:/build
       - ./nginx:/handoff
+    command: "bash -c 'jekyll build && rsync -a --delete /build/_site /handoff/'"
+
   gtsite-nginx:
     image: quay.io/geotrellis/gtsite-nginx
     build:
