Add .ruby-version file
Ruby version matches Netlify build environment.

--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ exclude:
   - .vagrant/
   - deployment
   - scripts
-  - .ruby_version
+  - .ruby-version
   - docker-compose.yml
   - Dockerfile
   - Gemfile
