--- a/_config.yml
+++ b/_config.yml
@@ -14,11 +14,11 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: GeoTrellis
-email: your-email@example.com
+email: info@azavea.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  GeoTrellis is an open source, geographic data processing library 
+  designed to work with large geospatial raster data sets. It is written 
+  in Scala and maintained by Azavea.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: geotrellis
